Commit 2, deux lignes ajoutées

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <h1>Salut, je suis Danielanez</h1> 
+    <p>Je suis un développeur web et mobile</p>
   </body>
 </html>
